parsers/tree-sitter-minizinc/grammar.js
		source_file: ($) => sepBy(";", field("item", $._item)),

		_item: ($) =>
			choice(
				$.annotation,
				$.assignment,
				$.constraint,
				$.declaration,
				$.enumeration,
				$.function_item,
				$.goal,
				$.include,
				$.output,
				$.predicate,
				$.type_alias
			),

		annotation: ($) =>
			seq(
				"annotation",
				field("name", $._identifier),
				optional(field("parameters", $.annotation_parameters))
			),

		annotation_parameters: ($) => $._parameters,

		assignment: ($) =>
			seq(
				field("name", $._identifier),
				"=",
				field("definition", $._expression)
			),

		constraint: ($) =>
			seq(
				"constraint",
				optional($._annotation_list),
				field("expression", $._expression)
			),

		declaration: ($) =>
			seq(
				field("type", $._type),
				":",
				field("name", $._pattern),
				optional($._annotation_list),
				optional(seq("=", field("definition", $._expression)))
			),

		enumeration: ($) =>
			seq(
				"enum",
				field("name", $._identifier),
				optional($._annotation_list),
				optional(seq("=", sepBy1("++", field("case", $._enumeration_case))))
			),

		function_item: ($) =>
			seq(
				"function",
				field("type", $._type),
				":",
				field("name", $._identifier),
				$._parameters,
				optional($._annotation_list),
				optional(seq("=", field("body", $._expression)))
			),

		goal: ($) =>
			seq(
				"solve",
				optional($._annotation_list),
				choice(
					field("strategy", "satisfy"),
					seq(
						field("strategy", choice("maximize", "minimize")),
						field("objective", $._expression)
					)
				)
			),

		include: ($) => seq("include", field("file", $.string_literal)),

		output: ($) =>
			seq(
				"output",
				optional(seq("::", field("section", $.string_literal))),
				field("expression", $._expression)
			),

		predicate: ($) =>
			seq(
				field("type", choice("predicate", "test")),
				field("name", $._identifier),
				$._parameters,
				optional($._annotation_list),
				optional(seq("=", field("body", $._expression)))
			),

		_annotation_list: ($) =>
			seq(
				repeat1(
					prec.left(
						PREC.annotation,
						seq("::", field("annotation", $._unannotated_expression))
					)
				)
			),

		_parameters: ($) =>
			seq("(", sepBy(",", field("parameter", $.parameter)), ")"),
		parameter: ($) =>
			seq(
				field("type", $._type),
				optional(
					seq(":", field("name", $._pattern), optional($._annotation_list))
				)
			),

		_enumeration_case: ($) =>
			choice(
				$.enumeration_members,
				$.anonymous_enumeration,
				$.enumeration_constructor
			),

		enumeration_members: ($) =>
			seq("{", sepBy(",", field("member", $._identifier)), "}"),
		anonymous_enumeration: ($) =>
			seq(
				field("name", $.anonymous),
				"(",
				sepBy1(",", field("parameter", $._type)),
				")"
			),
		enumeration_constructor: ($) =>
			seq(
				field("name", $._identifier),
				"(",
				sepBy1(",", field("parameter", $._type)),
				")"
			),

		type_alias: ($) =>
			seq("type", field("name", $._identifier), "=", field("type", $._type)),

		_expression: ($) =>
			choice($._unannotated_expression, $.annotated_expression),
		_callable: ($) =>
			choice(
				$.inversed_identifier,
				$._identifier,
				$.call,
				$.generator_call,
				$.indexed_access,
				$.tuple_access,
				$.record_access,
				$.parenthesised_expression
			),

		call: ($) =>
			prec(
				PREC.call,
				seq(
					field("function", $._callable),
					"(",
					sepBy(",", field("argument", $._expression)),
					")"
				)
			),

		infix_operator: ($) => {
			// WARNING: All non-word operators must be included in the OPERATOR_CHARACTERS string
			const table = [
				[prec.left, PREC.equivalence, choice(...EQUIVALENCE_OPERATORS)],
				[prec.left, PREC.implication, choice(...IMPLICATION_OPERATORS)],
				[prec.left, PREC.disjunction, choice(...DISJUNCTION_OPERATORS)],
				[
					prec.left,
					PREC.exclusive_disjunction,
					choice(...EXCLUSIVE_DISJUNCTION_OPERATORS),
				],
				[prec.left, PREC.conjunction, choice(...CONJUNCTION_OPERATORS)],
				// TODO: Should really be nonassoc
				[prec.left, PREC.comparative, choice(...COMPARISON_OPERATORS)],
				[prec.left, PREC.union, choice(...UNION_OPERATORS)],
				[prec.left, PREC.set_diff, choice(...SET_DIFF_OPERATORS)],
				[prec.left, PREC.symdiff, "symdiff"],
				[prec.left, PREC.intersect, choice(...INTERSECTION_OPERATORS)],
				// TODO: Could be nonassoc, will always give type error
				[prec.left, PREC.range, choice(...RANGE_OPERATORS)],
				[prec.left, PREC.additive, choice(...ADDITIVE_OPERATORS)],
				[prec.left, PREC.multiplicative, choice(...MULTIPLICATIVE_OPERATORS)],
				[prec.left, PREC.exponent, "^"],
				[prec.left, PREC.default, "default"],
			]

			return choice(
				...table.map(([assoc, precedence, operator]) =>
					assoc(
						precedence,
						seq(
							field("left", $._expression),
							field("operator", operator),
							field("right", $._expression)
						)
					)
				)
			)
		},

		_type: ($) =>
			choice(
				$.array_type,
				$.set_type,
				$.tuple_type,
				$.record_type,
				$.operation_type,
				$.type_base,
				$.any_type,
				$.list_type
			),
		array_type: ($) =>
			seq(
				"array",
				"[",
				sepBy1(",", field("dimension", $.type_base)),
				"]",
				"of",
				field("type", $._type)
			),
		set_type: ($) =>
			seq(
				optional(field("var_par", choice("var", "par"))),
				optional(field("opt", "opt")),
				"set",
				"of",
				field("type", $._type)
			),
		type_base: ($) =>
			choice(
				seq(
					optional(field("var_par", choice("var", "par"))),
					optional(field("opt", "opt")),
					field(
						"domain",
						choice(
							$.primitive_type,
							$.type_inst_id,
							$.type_inst_enum_id,
							$._expression
						)
					)
				),
				seq(field("any", "any"), field("domain", $.type_inst_id))
			),
		primitive_type: ($) => choice(...primitive_types),
		any_type: ($) => "any",
		absent: ($) => "<>",
		anonymous: ($) => "_",
		array_literal: ($) =>
			seq("[", sepBy(",", field("member", $.array_literal_member)), "]"),
		array_literal_member: ($) =>
			seq(
				optional(seq(field("index", $._expression), ":")),
				field("value", $._expression)
			),
		array_literal_2d: ($) =>
			seq(
				"[|",
				optional(
					seq(
						choice(
							repeat1(seq(field("column_index", $._expression), ":")),
							field("row", $.array_literal_2d_row)
						),
						repeat(seq("|", field("row", $.array_literal_2d_row))),
						optional("|")
					)
				),
				"|]"
			),
		array_literal_2d_row: ($) =>
			seq(
				optional(seq(field("index", $._expression), ":")),
				sepBy1(",", field("member", $._expression))
			),
		boolean_literal: ($) => choice("true", "false"),
		float_literal: ($) =>
			token(
				choice(
					/\d+\.\d+/,
					/\d+(\.\d+)?[Ee][+-]?\d+/,
					/0[xX]([0-9a-fA-F]*\.[0-9a-fA-F]+|[0-9a-fA-F]+\.?)[pP][+-]?[0-9]+/
				)
			),
		integer_literal: ($) =>
			token(choice(/[0-9]+/, /0x[0-9a-fA-F]+/, /0b[01]+/, /0o[0-7]+/)),
		infinity: ($) => choice("infinity", "∞"),
		set_literal: ($) =>
			choice("∅", seq("{", sepBy(",", field("member", $._expression)), "}")),

		string_literal: ($) => seq('"', optional($._string_content), '"'),
		_string_content: ($) =>
			repeat1(field("content", choice($.string_characters, $.escape_sequence))),
		string_characters: ($) => token.immediate(prec(1, /[^"\n\\]+/)),
		escape_sequence: ($) => {
			const simpleEscape = [
				["\\'", "'"],
				['\\"', '"'],
				["\\\\", "\\"],
				["\\r", "\r"],
				["\\n", "\n"],
				["\\t", "\t"],
			]
			return choice(
				field("escape", choice(...simpleEscape.map(([e, v]) => alias(e, v)))),
				seq("\\", field("escape", alias(/[0-7]{1,3}/, "octal"))),
				seq("\\x", field("escape", alias(/[0-9a-fA-F]{2}/, "hexadecimal"))),
				seq("\\u", field("escape", alias(/[0-9a-fA-F]{4}/, "hexadecimal"))),
				seq("\\U", field("escape", alias(/[0-9a-fA-F]{8}/, "hexadecimal")))
			)
		},

		tuple_literal: ($) =>
			seq(
				"(",
				field("member", $._expression),
				",",
				sepBy(",", field("member", $._expression)),
				")"
			),
		record_literal: ($) =>
			seq("(", sepBy1(",", field("member", $.record_member)), ")"),
		record_member: ($) =>
			seq(field("name", $._identifier), ":", field("value", $._expression)),

		identifier: ($) => {
			return new RegExp(`[^"'\\s\\.\\-\\[\\]\\^\\/${OPERATOR_CHARACTERS}]+`)
		},
		_identifier: ($) => choice($.identifier, $.quoted_identifier),

		_pattern: ($) =>
			choice(
				$._identifier,
				$.absent,
				$.anonymous,
				$.boolean_literal,
				$.string_literal,
				$.pattern_numeric_literal,
				$.pattern_call,
				$.pattern_tuple,
				$.pattern_record
			),
		pattern_tuple: ($) =>
			seq(
				"(",
				field("field", $._pattern),
				",",
				sepBy(",", field("field", $._pattern)),
				")"
			),
